# spyder-env-manager

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  RELEASE.md  crowdin.yml  pyproject.toml  setup.py
.github/workflows/: black.yml  linux-tests.yml  pre-commit.yml
docs/: Makefile  conf.py  index.rst  installation.md  make.bat  requirements.txt  usage.md
external-deps/envs-manager/: .gitrepo
requirements/: conda.txt  main.yml  tests.yml
spyder_env_manager/: __init__.py
spyder_env_manager/spyder/: __init__.py  api.py  config.py  confpage.py  plugin.py  remoteclient.py  widgets.py  workers.py
spyder_env_manager/spyder/assets/templates/: environment_info.html
spyder_env_manager/spyder/locale/: spyder_env_manager.pot
spyder_env_manager/spyder/widgets/: __init__.py  container.py  dialog.py  edit_environment.py  helper_widgets.py  list_environments.py  main_widget.py  manager.py  new_environment.py  packages_table.py  widgets.py
spyder_env_manager/tests/: Dockerfile.ssh  __init__.py  docker-compose.yml  test_api.py  test_config.py  test_container.py  test_main_widget.py  test_plugin.py  test_widgets.py
spyder_env_manager/tests/data/: import_env.yml
